--- a/src/app/core/layout/landing/landing.component.html
+++ b/src/app/core/layout/landing/landing.component.html
@@ -8,7 +8,7 @@
 
           <form [formGroup]="landingForm" class="search-container-field">
             <mat-form-field appearance="outline" color="primary">
-              <mat-label>Serviço ou fornecedor</mat-label>
+              <mat-label>Busque por um serviço</mat-label>
               <input
                 type="text"
                 formControlName="search"
@@ -38,10 +38,10 @@
             <h2>Serviços</h2>
             <p>Busque o que você precisa</p>
           </div>
-          <div class="main-card" (click)="goToProviders()">
+          <!-- <div class="main-card" (click)="goToProviders()">
             <h2>Fornecedores</h2>
             <p>Encontre o mais próximo</p>
-          </div>
+          </div> -->
         </div>
 
         <div class="subcards-container">
