--- a/src/app/features/services/service/edit/edit.component.html
+++ b/src/app/features/services/service/edit/edit.component.html
@@ -63,7 +63,7 @@
     <div class="create-container-agenda">
       <h2 class="title-container">Horários disponíveis</h2>
 
-      <!-- <form [formGroup]="editForm">
+      <form [formGroup]="agendaForm">
         <div class="create-container-agenda-content">
           <div class="create-container-agenda-content-item">
             <div class="create-container-agenda-content-item-day">
@@ -195,7 +195,7 @@
             </div>
           </div>
         </div>
-      </form> -->
+      </form>
     </div>
   </form>
 
