--- a/src/app/features/services/service/service.component.scss
+++ b/src/app/features/services/service/service.component.scss
@@ -5,6 +5,10 @@
 
   .back-button {
     margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
   }
 
   .nav-wrapper {
