--- a/src/app/core/layout/landing/landing.component.html
+++ b/src/app/core/layout/landing/landing.component.html
@@ -61,7 +61,7 @@
             <div class="subcard-image">
               <img src="/assets/landing/executive.png" alt="Worker" />
             </div>
-            <strong>executivo</strong>
+            <strong>consultoria</strong>
           </div>
           <div class="subcard">
             <div class="subcard-image">
