fix: edição de agenda

--- a/src/app/features/services/service/service.component.html
+++ b/src/app/features/services/service/service.component.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="service-schedule">
-    <h2 class="title-container">Horários disponíveis</h2>
+    <h2 class="title-container">Horários ocupados</h2>
 
     <div class="service-schedule-week">
       <div class="service-schedule-day" [ngClass]="{ disabled: agenda.segunda.length === 0 }">
