--- a/src/app/features/services/service/create/create.component.html
+++ b/src/app/features/services/service/create/create.component.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="create-container-agenda">
-      <h2 class="title-container">Horários disponíveis</h2>
+      <h2 class="title-container">Horários ocupados</h2>
 
       <form [formGroup]="agendaForm">
         <div class="create-container-agenda-content">
