--- a/src/app/features/profile/profile.component.scss
+++ b/src/app/features/profile/profile.component.scss
@@ -74,8 +74,8 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      min-height: 300px;
-      padding: 15px;
+      // min-height: 300px;
+      padding: 15px 15px 0px 15px;
       border-radius: 8px;
       background-color: var(--background-grey);
 
@@ -88,9 +88,41 @@
         align-items: center;
         justify-content: center;
         background-color: white;
+        margin-bottom: 15px;
         padding: 10px;
         width: 100%;
         border-radius: 6px;
+        flex-flow: column;
+        border-width: 1px;
+        border-style: solid;
+        border-color: var(--primary-grey);
+        border-radius: 8px;
+
+        &-title {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+          color: var(--primary-orange);
+          font-weight: 600;
+          width: 100%;
+          height: 25px;
+        }
+
+        &-reservations {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+          width: 100%;
+          height: 50px;
+          border-width: 1px;
+          border-style: solid;
+          border-color: var(--primary-grey);
+          border-radius: 8px;
+          margin: 10px 10px 10px 10px;
+
+        }
       }
 
       h3 {
@@ -115,9 +147,4 @@
     }
   }
 
-  .actions-container {
-    margin-top: 30px;
-    display: flex;
-    justify-content: flex-end;
-  }
 }
