--- a/src/app/features/services/service/edit/edit.component.html
+++ b/src/app/features/services/service/edit/edit.component.html
@@ -207,7 +207,7 @@
       class="custom-flat-button"
       mat-flat-button
     >
-      Editar serviço
+      Salvar
     </button>
   </footer>
 </div>
