--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@ $marcai-web-theme: mat.define-light-theme(
 
   --border-color: #e2e8f0;
 
-  --background-grey: #fbfbfb;
+  --background-grey: #f4f7fa;
 }
 
 * {
