--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="nav-container-wrapper-buttons" *ngIf="!isLogged">
       <button mat-button class="custom-basic-button" (click)="handleRegistration()">
-        Criar conta
+        criar conta
       </button>
       <button
         mat-flat-button
@@ -18,7 +18,7 @@
         (click)="handleLogin()"
         style="margin-left: 4px"
       >
-        Login
+        login
       </button>
     </div>
 
