--- a/src/app/core/layout/nav/nav.component.scss
+++ b/src/app/core/layout/nav/nav.component.scss
@@ -1,9 +1,8 @@
 .nav-container {
-  background-color: var(--background-grey);
-  position: fixed;
+  background-color: var(--full-white);
+  position: inherit;
   z-index: 2;
   width: 100%;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
 
   &-wrapper {
     display: flex;
@@ -100,7 +99,7 @@
       justify-content: center;
 
       img {
-        height: 35px;
+        height: 45px;
         margin: -10px 24px 0 0;
         cursor: pointer;
       }
