--- a/src/app/shared/bnp-components/button/button.component.scss
+++ b/src/app/shared/bnp-components/button/button.component.scss
@@ -72,6 +72,15 @@ bnp-button {
         color: #000000;
         background-color: #fafafa;
       }
+
+      &.transparent {
+        background-color: transparent;
+        color: var(--benup-colors-accent-grey);
+
+        &:hover {
+          background-color: var(--benup-colors-secondary-grey);
+        }
+      }
     }
     &.outline {
       color: var(--benup-colors-accent-grey);
