--- a/src/app/features/profile/profile.component.scss
+++ b/src/app/features/profile/profile.component.scss
@@ -61,6 +61,7 @@
   .services-container-listing {
     display: grid;
     gap: 30px;
+
     &-item {
       display: flex;
       flex-direction: column;
@@ -78,6 +79,7 @@
           height: 40px;
           width: 40px;
           margin-right: 10px;
+
           img {
             height: 100%;
           }
@@ -110,12 +112,14 @@
         border: 1px solid var(--border-color);
         border-radius: 8px;
         width: 100%;
+
         &:hover {
           transform: translateY(-2px);
           transition: 0.3s;
           box-shadow: 3px 2px 18px 8px rgba(244, 171, 136, 0.1);
           cursor: pointer;
         }
+
         h2 {
           font-size: 1.5rem;
           line-height: 1.8rem;
@@ -224,9 +228,106 @@
       margin: 25px 0px;
     }
   }
+
   .actions-container {
     margin-top: 30px;
     display: flex;
     justify-content: flex-end;
   }
+}
+
+.clientReservations {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+
+  &-week {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  &-list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    // min-height: 300px;
+    padding: 15px 15px 0px 15px;
+    border-radius: 8px;
+    background-color: var(--background-grey);
+
+    &.disabled {
+      opacity: 0.7;
+    }
+
+    &-line {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: white;
+      margin-bottom: 15px;
+      padding: 10px;
+      width: 100%;
+      margin-bottom: 20px;
+      border-radius: 6px;
+      flex-flow: column;
+      border-width: 1px;
+      border-style: solid;
+      border-color: var(--primary-grey);
+      border-radius: 8px;
+
+      &-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: var(--primary-orange);
+        font-weight: 600;
+        width: 100%;
+        height: 25px;
+      }
+
+      &-reservations {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+        height: 50px;
+        border-width: 1px;
+        border-style: solid;
+        border-color: var(--primary-grey);
+        border-radius: 8px;
+        margin: 10px 10px 10px 10px;
+      }
+    }
+
+
+  }
+
+  h3 {
+    text-align: center;
+    color: var(--primary-orange);
+    font-weight: 600;
+  }
+
+  .description {
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: var(--background-grey);
+  }
+
+  .title-container {
+    background-color: var(--secondary-grey);
+    border-radius: 6px;
+    padding: 10px 20px;
+    margin: 25px 0px;
+  }
+}
+
+.actions-container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
 }
